--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <img src="img/Rectangle 8.png" alt="cool">
         </div>
         </section>
-        <footer>
+        <footer class="footer">
         <div class="infocheck">
         <h1 class="topic5">Zwtta Hotels</h1>
         <p class="paragraph">Our hotel in on teh huge quality
